# arm-reference-mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
docs/: _config.yml  index.md  installation.md
docs/servers/: arm-cloud-migration.md  arm-docs-rag.md  arm-register-reference.md  arm-tinyml.md
src/arm_reference_mcp/: cloud_migration_server.py  data.py  docs_rag_server.py  server.py  tinyml_server.py
tests/: test_cloud_migration.py  test_docs_rag.py  test_tinyml.py  test_tools.py
