[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arm-reference-mcp"
version = "0.4.0"
description = "ARM architecture MCP toolkit — 44 tools across 4 servers: register reference, documentation RAG, cloud migration advisor, and TinyML/edge AI deployment"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
arm-reference-mcp = "arm_reference_mcp.server:main"
arm-docs-rag-mcp = "arm_reference_mcp.docs_rag_server:main"
arm-cloud-migration-mcp = "arm_reference_mcp.cloud_migration_server:main"
arm-tinyml-mcp = "arm_reference_mcp.tinyml_server:main"
